--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.40.0",
+    "@twilio/voice-sdk": "^2.18.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -21,16 +22,23 @@
     "helmet": "^8.1.0",
     "lucide-react": "^0.561.0",
     "ml-distance": "^4.0.1",
+    "mongoose": "^9.1.6",
     "peerjs": "^1.5.5",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "recharts": "^3.6.0",
-    "socket.io-client": "^4.8.3"
+    "sip.js": "^0.21.2",
+    "socket.io-client": "^4.8.3",
+    "twilio": "^5.12.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.24",
     "concurrently": "^9.0.1",
+    "firebase-tools": "^15.5.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
