--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "dev:server": "node server/index.js",
     "dev:all": "concurrently \"npm:dev:server\" \"npm:dev\"",
+    "test": "node --test",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -20,6 +21,7 @@
     "express-rate-limit": "^8.2.1",
     "firebase": "^10.14.1",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.561.0",
     "ml-distance": "^4.0.1",
     "mongoose": "^9.1.6",
