--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,6 @@
 {
   "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "https://connectai-backend.onrender.com/api/:path*"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+    { "source": "/api/:path*", "destination": "https://YOUR_RENDER_BACKEND_HOST/api/:path*" },
+    { "source": "/twilio/:path*", "destination": "https://YOUR_RENDER_BACKEND_HOST/twilio/:path*" }
   ]
 }
