--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites": [
-    { "source": "/api/:path*", "destination": "https://YOUR_RENDER_BACKEND_HOST/api/:path*" },
-    { "source": "/twilio/:path*", "destination": "https://YOUR_RENDER_BACKEND_HOST/twilio/:path*" }
+    { "source": "/api/:path*", "destination": "https://connectai-ldhc.onrender.com/api/:path*" },
+    { "source": "/twilio/:path*", "destination": "https://connectai-ldhc.onrender.com/twilio/:path*" }
   ]
 }
