--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "vite",
     "dev:server": "node server/index.js",
+    "dev:worker": "node server/worker.js",
     "dev:all": "concurrently \"npm:dev:server\" \"npm:dev\"",
     "test": "node --test",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "load:test": "node scripts/load-test.mjs"
   },
   "dependencies": {
     "@google/genai": "^1.40.0",
@@ -20,6 +22,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^8.2.1",
     "firebase": "^10.14.1",
+    "firebase-admin": "^12.5.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.561.0",
