--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,16 +5,18 @@
   "display": "standalone",
   "background_color": "#0f172a",
   "theme_color": "#4f46e5",
+  "description": "ConnectAI - SMB CCaaS platform",
   "icons": [
     {
-      "src": "/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "/favicon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     },
     {
-      "src": "/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "/favicon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml"
     }
   ]
 }
