var system update

--- a/package.json
+++ b/package.json
@@ -4,11 +4,20 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "prebuild": "node scripts/generate-version.mjs",
+    "worklog:endpoints": "node scripts/generate-endpoint-worklog.mjs",
+    "prebuild": "npm run worklog:endpoints && node scripts/generate-version.mjs",
+    "predev": "npm run worklog:endpoints",
+    "predev:server": "npm run worklog:endpoints",
     "dev": "vite",
     "dev:server": "node server/index.js",
     "dev:worker": "node server/worker.js",
     "dev:all": "concurrently \"npm:dev:server\" \"npm:dev\"",
+    "tauri:dev": "set \"PATH=%USERPROFILE%\\.cargo\\bin;%PATH%\" && tauri dev",
+    "desktop:dev": "concurrently \"npm:dev:server\" \"npm:tauri:dev\"",
+    "desktop:build": "set \"PATH=%USERPROFILE%\\.cargo\\bin;%PATH%\" && tauri build",
+    "desktop:artifacts": "node scripts/package-desktop-release.mjs --repo Coolzymccooy/connectai",
+    "desktop:release": "npm run desktop:build && npm run desktop:artifacts",
+    "desktop:manifest:publish": "node scripts/publish-desktop-manifest.mjs",
     "test": "node --test",
     "build": "vite build",
     "preview": "vite preview",
@@ -17,6 +26,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.40.0",
+    "@tauri-apps/api": "^2.10.1",
     "@twilio/voice-sdk": "^2.18.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
@@ -36,9 +46,11 @@
     "recharts": "^3.6.0",
     "sip.js": "^0.21.2",
     "socket.io-client": "^4.8.3",
+    "stripe": "^18.3.0",
     "twilio": "^5.12.1"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^2.10.0",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.24",
