--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,15 +8,15 @@
   "description": "ConnectAI - SMB CCaaS platform",
   "icons": [
     {
-      "src": "/favicon.svg",
-      "sizes": "any",
-      "type": "image/svg+xml",
+      "src": "/connectai-logo.png",
+      "sizes": "512x512",
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/favicon.svg",
-      "sizes": "any",
-      "type": "image/svg+xml"
+      "src": "/connectai-logo.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
