--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "desktop:artifacts": "node scripts/package-desktop-release.mjs --repo Coolzymccooy/connectai",
     "desktop:release": "npm run desktop:build && npm run desktop:artifacts",
     "desktop:manifest:publish": "node scripts/publish-desktop-manifest.mjs",
+    "tenant:migrate-local": "node scripts/migrate-default-tenant.mjs",
+    "firebase:rules:deploy": "firebase deploy --only firestore:rules --project connectai-cec73",
     "test": "node --test",
     "build": "vite build",
     "preview": "vite preview",
@@ -56,6 +58,7 @@
     "autoprefixer": "^10.4.24",
     "concurrently": "^9.0.1",
     "firebase-tools": "^15.5.1",
+    "playwright": "^1.58.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2",
